# LearnDesignPatterns

./: README.md
CompisiteDesignPattern/: CMakeLists.txt  ChildNode.cpp  ChildNode.h  LeafNode.cpp  LeafNode.h  Node.cpp  Node.h  RootNode.cpp  RootNode.h  main.cpp
FactoryMethodPattern/: CMakeLists.txt  GifReader.cpp  GifReader.h  GifReaderFactory.cpp  GifReaderFactory.h  JpgReader.cpp  JpgReader.h  JpgReaderFactory.cpp  JpgReaderFactory.h  PngReader.cpp  PngReader.h  PngReaderFactory.cpp  PngReaderFactory.h  Reader.h  ReaderFactory.h  main.cpp
SimpleFactoryPattern/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Triangle.cpp  Triangle.h  main.cpp
